feat(typescript): add security for apiKey
